# watson-discovery-api

./: .travis.yml  Cargo.toml  README.md  generate.sh  openapi-generator-config.json
docs/: AggregationResult.md  Calculation.md  Collection.md  CollectionDiskUsage.md  CollectionUsage.md  CollectionsApi.md  Configuration.md  ConfigurationsApi.md  Conversions.md  CreateCollectionRequest.md  CreateEnvironmentRequest.md  CreateEventObject.md  CreateEventResponse.md  CredentialDetails.md  Credentials.md  CredentialsApi.md  CredentialsList.md  DeleteCollectionResponse.md  DeleteConfigurationResponse.md  DeleteCredentials.md  DeleteDocumentResponse.md  DeleteEnvironmentResponse.md  DiskUsage.md  DocumentAccepted.md  DocumentCounts.md  DocumentSnapshot.md  DocumentStatus.md  DocumentsApi.md  ElementsEnrichmentOptions.md  Enrichment.md  EnrichmentOptions.md  Environment.md  EnvironmentDocuments.md  EnvironmentsApi.md  ErrorResponse.md  EventData.md  EventsAndFeedbackApi.md  Expansion.md  Expansions.md  Field.md  (+100 more)
src/: iam.rs  instance.rs  lib.rs
src/apis/: client.rs  collections_api.rs  configuration.rs  configurations_api.rs  credentials_api.rs  documents_api.rs  environments_api.rs  events_and_feedback_api.rs  gateway_configuration_api.rs  mod.rs  queries_api.rs  query_modifications_api.rs  query_modifications_api.rs~  test_your_configuration_on_a_document_api.rs  training_data_api.rs  user_data_api.rs
src/models/: aggregation_result.rs  calculation.rs  collection.rs  collection_disk_usage.rs  collection_usage.rs  configuration.rs  conversions.rs  (+122 more)
tests/: iam_test.rs
