[package]
name = "watson-discovery-api"
version = "2.0.0"
authors = []
description = "The IBM Watson&trade; Discovery Service is a cognitive search and content analytics engine that you can add to applications to identify patterns, trends and actionable insights to drive better decision-making. Securely unify structured and unstructured data with pre-enriched content, and use a simplified query language to eliminate the need for manual filtering of results."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-rustls = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json =  "1.0"
serde_urlencoded = "0.5"
tokio-core = "0.1"
