[package]
name = "watson-discovery-api"
version = "0.1.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]

description = "Watson Discovery API"
homepage = "https://github.com/bruceadams/watson-discovery-api"
keywords = ["watson", "discovery", "api"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bruceadams/watson-discovery-api"

[badges]
travis-ci = { repository = "bruceadams/watson-discovery-api" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
hyper = "0.11"
serde_yaml = "0.8"
base64 = "0.10"
futures = "0.1"

[dev-dependencies]
tokio-core = "0.1"
